--- a/view/zfc-datagrid/renderer/jqGrid/layout.phtml
+++ b/view/zfc-datagrid/renderer/jqGrid/layout.phtml
@@ -208,7 +208,7 @@ var grid_<?php echo $this->gridId; ?> = $('#<?php echo $this->gridId; ?>').jqGri
     
     rowNum: <?php echo $itemCountPerPage; ?>,
 
-	mtype : 'POST',
+	mtype : '<?= $parameterNames['method']; ?>',
     postData: {
         <?php
         echo implode(',', $parametersHtml);
