--- a/view/zfc-datagrid/renderer/bootstrapTable/layout.phtml
+++ b/view/zfc-datagrid/renderer/bootstrapTable/layout.phtml
@@ -21,12 +21,17 @@ if(count($this->massActions) > 0){
     <?php $this->inlineScript()->captureEnd(); ?>
 <?php endif; ?>
 
-<form name="form_<?php echo $this->gridId; ?>" method="post" action="<?php echo $this->url(null, array(), array(), true); ?>">
+<form name="form_<?php echo $this->gridId; ?>" method="<?= $this->parameterNames['method']; ?>" action="<?php echo $this->url(null, array(), array(), true); ?>">
 
     <input type="submit" style="width: 0px; height:0px; margin: 0; padding: 0; border: 0;" name="hiddenSubmit" />
     <input type="hidden" name="<?php echo $this->parameterNames['sortColumns']; ?>" value="<?php echo $this->activeParameters[$this->parameterNames['sortColumns']]; ?>" />
     <input type="hidden" name="<?php echo $this->parameterNames['sortDirections']; ?>" value="<?php echo $this->activeParameters[$this->parameterNames['sortDirections']]; ?>" />
 
+    <?php 
+    foreach($this->parameters as $name => $value){
+        echo '<input type="hidden" name="' . $name . '" value="' . $value . '" />';
+    }
+    ?>
     
 <?php echo $this->toolbar; ?>
 
