--- a/view/zfc-datagrid/renderer/bootstrapTable/layout.phtml
+++ b/view/zfc-datagrid/renderer/bootstrapTable/layout.phtml
@@ -12,7 +12,7 @@ if(count($this->massActions) > 0){
     $(function(){
         <?php //If daterange bootstrapTable filter is enable show it ?>
             $('input.daterange').daterangepicker(
-            <?= Zend\Json\Json::encode($this->daterangeParameters, false, array('enableJsonExprFinder' => true)); ?>
+            <?= Zend\Json\Json::encode($this->daterangeParameters, false, ['enableJsonExprFinder' => true]); ?>
             ).on('apply.daterangepicker', function(ev,picker){
                 this.form.submit();
             });
@@ -21,7 +21,7 @@ if(count($this->massActions) > 0){
     <?php $this->inlineScript()->captureEnd(); ?>
 <?php endif; ?>
 
-<form name="form_<?php echo $this->gridId; ?>" method="<?= $this->parameterNames['method']; ?>" action="<?php echo $this->url(null, array(), array(), true); ?>">
+<form name="form_<?php echo $this->gridId; ?>" method="<?= $this->parameterNames['method']; ?>" action="<?php echo $this->url(null, [], [], true); ?>">
 
     <input type="submit" style="width: 0px; height:0px; margin: 0; padding: 0; border: 0;" name="hiddenSubmit" />
     <input type="hidden" name="<?php echo $this->parameterNames['sortColumns']; ?>" value="<?php echo $this->activeParameters[$this->parameterNames['sortColumns']]; ?>" />
@@ -40,7 +40,7 @@ $orderOnclick = 'document.forms[\'form_'.$this->gridId.'\'].elements[\'' . $this
 $orderOnclick .= 'document.forms[\'form_'.$this->gridId.'\'].elements[\'' . $this->parameterNames['sortDirections'] . '\'].value = \'%s\';';
 $orderOnclick.= 'document.forms[\'form_'.$this->gridId.'\'].submit(); return false;';
 
-$classes = array('table', 'table-striped', 'table-bordered');
+$classes = ['table', 'table-striped', 'table-bordered'];
 if($this->rowClickAction !== null){
     $classes[] = 'table-hover';
 }
@@ -59,8 +59,8 @@ if($this->rowClickAction !== null){
 
                 foreach($this->columns as $col){
                     /* @var $col \ZfcDatagrid\Column\AbstractColumn */
-                    $classes = array();
-                    $styles = array();
+                    $classes = [];
+                    $styles = [];
 
                     $id = $col->getUniqueId();
 
@@ -93,14 +93,14 @@ if($this->rowClickAction !== null){
                             ?>
                             <a href="<?php echo
                                 $this->url(null,
-                                    array(),
-                                    array(
-                                        'query' => array_merge($this->activeParameters, array(
+                                    [],
+                                    [
+                                        'query' => array_merge($this->activeParameters, [
                                                 $this->parameterNames['sortColumns'] => $col->getUniqueId(),
                                                 $this->parameterNames['sortDirections'] => $direction,
-                                            )
+                                            ]
                                         )
-                                    ),
+                                    ],
                                     true
                                 );?>
                             " onclick="<?php echo sprintf($orderOnclick, $col->getUniqueId(), $direction); ?>">
@@ -135,7 +135,7 @@ if($this->rowClickAction !== null){
                     foreach($this->columns as $col){
                         /* @var $col \ZfcDatagrid\Column\AbstractColumn */
 
-                        $classes = array();
+                        $classes = [];
                         if($col->isHidden() === true){
                             $classes[] = 'hidden';
                         }
