--- a/view/zfc-datagrid/renderer/bootstrapTable/layout.phtml
+++ b/view/zfc-datagrid/renderer/bootstrapTable/layout.phtml
@@ -1,4 +1,4 @@
-<?php 
+<?php
 use ZfcDatagrid\Column\Type;
 
 $hasMassActions = false;
@@ -16,26 +16,26 @@ if(count($this->massActions) > 0){
             ).on('apply.daterangepicker', function(ev,picker){
                 this.form.submit();
             });
-        
+
     });
     <?php $this->inlineScript()->captureEnd(); ?>
 <?php endif; ?>
 
 <form name="form_<?php echo $this->gridId; ?>" method="<?= $this->parameterNames['method']; ?>" action="<?php echo $this->url(null, [], [], true); ?>">
 
-    <input type="submit" style="width: 0px; height:0px; margin: 0; padding: 0; border: 0;" name="hiddenSubmit" />
+    <input type="submit" style="width: 0; height: 0; margin: 0; padding: 0; border: 0;" name="hiddenSubmit" />
     <input type="hidden" name="<?php echo $this->parameterNames['sortColumns']; ?>" value="<?php echo $this->activeParameters[$this->parameterNames['sortColumns']]; ?>" />
     <input type="hidden" name="<?php echo $this->parameterNames['sortDirections']; ?>" value="<?php echo $this->activeParameters[$this->parameterNames['sortDirections']]; ?>" />
 
-    <?php 
+    <?php
     foreach($this->parameters as $name => $value){
         echo '<input type="hidden" name="' . $name . '" value="' . $value . '" />';
     }
     ?>
-    
+
 <?php echo $this->toolbar; ?>
 
-<?php 
+<?php
 $orderOnclick = 'document.forms[\'form_'.$this->gridId.'\'].elements[\'' . $this->parameterNames['sortColumns'] . '\'].value = \'%s\';';
 $orderOnclick .= 'document.forms[\'form_'.$this->gridId.'\'].elements[\'' . $this->parameterNames['sortDirections'] . '\'].value = \'%s\';';
 $orderOnclick.= 'document.forms[\'form_'.$this->gridId.'\'].submit(); return false;';
@@ -82,7 +82,7 @@ if($this->rowClickAction !== null){
                         $styles[] = 'text-align: right';
                     }
                     ?>
-                    <th id="<?php echo $this->escapehtmlattr($id); ?>" class="<?php echo implode(',', $classes); ?>" style="<?php echo implode(';', $styles); ?>">
+                    <th id="<?php echo $this->escapehtmlattr($id); ?>" class="<?php echo implode(' ', $classes); ?>" style="<?php echo implode(';', $styles); ?>">
 
                         <?php if($col->isUserSortEnabled() === true):
                             if($col->isSortActive() === true && $col->getSortActiveDirection() === 'ASC'){
@@ -144,26 +144,32 @@ if($this->rowClickAction !== null){
                         if ($col->isUserFilterEnabled() === true) {
 
                             if ($col->hasFilterSelectOptions() === true) {
-                                $htmlFilter = '<select name="toolbarFilters[' . $col->getUniqueId() . ']" style="width: 80%" onchange="this.form.submit()" class="form-control" >';
-                                foreach ($col->getFilterSelectOptions() as $value => $option) {
-                                    if ($col->getFilterActiveValue() === $value) {
-                                        $htmlFilter .= '<option value="' . $value . '" selected="selected">' . $option . '</option>';
-                                    } else if (($col->getFilterActiveValue() === '') && ($value === '')){
-                                        $htmlFilter .= '<option value="' . $value . '" selected="selected">' . $option . '</option>';
-                                    } else {
-                                        $htmlFilter .= '<option value="' . $value . '">' . $option . '</option>';
-                                    }
-                                }
-                                $htmlFilter .= '</select>';
+                                $htmlFilter = sprintf(
+                                    '<select name="toolbarFilters[%s]" style="width: 80%%" onchange="this.form.submit()" class="form-control" >',
+                                    $col->getUniqueId()
+                                );
 
-                            } else if ($col->getType() instanceof \ZfcDatagrid\Column\Type\DateTime){
-                                $htmlFilter = '<input type="text" name="toolbarFilters[' . $col->getUniqueId() . ']" style="width: 80%" value="' . $col->getFilterActiveValue() . '" class="form-control daterange" />';
+                                foreach ($col->getFilterSelectOptions() as $value => $option) {
+                                    $htmlFilter .= sprintf(
+                                        '<option value="%s" %s>%s</option>' ,
+                                        $value,
+                                        ($col->getFilterActiveValue() === (string)$value ? 'selected="selected"' : ''),
+                                        $option
+                                    );
+                                }
+
+                                $htmlFilter .= '</select>';
                             } else {
-                                $htmlFilter = '<input type="text" name="toolbarFilters[' . $col->getUniqueId() . ']" style="width: 80%" value="' . $col->getFilterActiveValue() . '" class="form-control" />';
+                                $htmlFilter = sprintf(
+                                    '<input type="text" name="toolbarFilters[%s]" style="width: 80%%" value="%s" class="form-control %s" />',
+                                    $col->getUniqueId(),
+                                    $col->getFilterActiveValue(),
+                                    ($col->getType() instanceof \ZfcDatagrid\Column\Type\DateTime ? ' daterange' : '')
+                                );
                             }
                         }
                         ?>
-                        <td class="<?php echo implode(',', $classes); ?>">
+                        <td class="<?php echo implode(' ', $classes); ?>">
                             <?php echo $htmlFilter; ?>
                         </td>
                         <?php
