--- a/view/zfc-datagrid/toolbar/export.phtml
+++ b/view/zfc-datagrid/toolbar/export.phtml
@@ -1,5 +1,5 @@
 <?php 
-$url = $this->url(null, array(), array(), true);
+$url = $this->url(null, [], [], true);
 if($this->overwriteUrl != ''){
     $url = $this->overwriteUrl;
 }
