--- a/view/zfc-datagrid/renderer/bootstrapTable/paginator.phtml
+++ b/view/zfc-datagrid/renderer/bootstrapTable/paginator.phtml
@@ -11,13 +11,13 @@ $paginatorOnclick.= 'document.forms[\'form_'.$this->gridId.'\'].submit(); return
         <?php if($this->current > 1):?>
             <li><a href="<?php echo 
                     $this->url(null, 
-                        array(),
-                        array(
-                            'query' => array_merge($this->activeParameters, array(
+                        [],
+                        [
+                            'query' => array_merge($this->activeParameters, [
                                     $this->parameterNames['currentPage'] => 1
-                                )
+                                ]
                             )
-                        ),
+                        ],
                         true
                     );?>
                 "  onclick="<?php echo sprintf($paginatorOnclick, 1);?>">
@@ -34,13 +34,13 @@ $paginatorOnclick.= 'document.forms[\'form_'.$this->gridId.'\'].submit(); return
         <?php if($this->current > 1): ?>
             <li><a href="<?php echo 
                     $this->url(null, 
-                        array(),
-                        array(
-                            'query' => array_merge($this->activeParameters, array(
+                        [],
+                        [
+                            'query' => array_merge($this->activeParameters, [
                                     $this->parameterNames['currentPage'] => $this->current - 1
-                                )
+                                ]
                             )
-                        ),
+                        ],
                         true
                     );?>
                 "  onclick="<?php echo sprintf($paginatorOnclick, $this->current - 1);?>">
@@ -63,13 +63,13 @@ $paginatorOnclick.= 'document.forms[\'form_'.$this->gridId.'\'].submit(); return
             
             if($this->current != $page){
                 $url = $this->url($this->matchedRouteName, 
-                    array(),
-                    array(
-                        'query' => array_merge($this->activeParameters, array(
+                    [],
+                    [
+                        'query' => array_merge($this->activeParameters, [
                                 $this->parameterNames['currentPage'] => $page
-                            )
+                            ]
                         )
-                    ),
+                    ],
                     true
                 );
             } else{
@@ -88,13 +88,13 @@ $paginatorOnclick.= 'document.forms[\'form_'.$this->gridId.'\'].submit(); return
             <li>
                 <a href="<?php echo 
                     $this->url($this->matchedRouteName, 
-                        array(),
-                        array(
-                            'query' => array_merge($this->activeParameters, array(
+                        [],
+                        [
+                            'query' => array_merge($this->activeParameters, [
                                     $this->parameterNames['currentPage'] => $this->current + 1
-                                )
+                                ]
                             )
-                        ),
+                        ],
                         true
                     );?>
                 " onclick="<?php echo sprintf($paginatorOnclick, $this->current + 1);?>">
@@ -113,13 +113,13 @@ $paginatorOnclick.= 'document.forms[\'form_'.$this->gridId.'\'].submit(); return
             <li>
                 <a href="<?php echo 
                     $this->url($this->matchedRouteName, 
-                        array(),
-                        array(
-                            'query' => array_merge($this->activeParameters, array(
+                        [],
+                        [
+                            'query' => array_merge($this->activeParameters, [
                                     $this->parameterNames['currentPage'] => $this->pageCount
-                                )
+                                ]
                             )
-                        ),
+                        ],
                         true
                     );?>
                 " onclick="<?php echo sprintf($paginatorOnclick, $this->pageCount);?>">
